tests/snapshots/test_postgis_rewrite_snapshots__select_with_qualified_column_ref.snap
---
source: tests/test_postgis_rewrite_snapshots.rs
expression: translate_to_text(pg)
---
PRAGMA case_sensitive_like = 1
CREATE TABLE features (id INTEGER PRIMARY KEY CHECK (id BETWEEN -2147483648 AND 2147483647) NOT NULL, geom BLOB) STRICT
SELECT CreateSpatialIndex('features', 'geom')
SELECT id FROM features WHERE (features.rowid IN (SELECT id FROM features_geom_rtree WHERE xmin <= ST_XMax(ST_MakeEnvelope(0, 0, 10, 10)) AND xmax >= ST_XMin(ST_MakeEnvelope(0, 0, 10, 10)) AND ymin <= ST_YMax(ST_MakeEnvelope(0, 0, 10, 10)) AND ymax >= ST_YMin(ST_MakeEnvelope(0, 0, 10, 10)))) AND (ST_Intersects(features.geom, ST_MakeEnvelope(0, 0, 10, 10)))
