tests/snapshots/test_postgis_rewrite_snapshots__update_rewrite_via_rtree.snap
---
source: tests/test_postgis_rewrite_snapshots.rs
expression: translate_to_text(pg)
---
PRAGMA case_sensitive_like = 1
CREATE TABLE features (id INTEGER PRIMARY KEY CHECK (id BETWEEN -2147483648 AND 2147483647) NOT NULL, geom BLOB, name TEXT) STRICT
SELECT CreateSpatialIndex('features', 'geom')
UPDATE features SET name = 'hit' WHERE (features.rowid IN (SELECT id FROM features_geom_rtree WHERE xmin <= ST_XMax(ST_MakeEnvelope(0, 0, 10, 10)) AND xmax >= ST_XMin(ST_MakeEnvelope(0, 0, 10, 10)) AND ymin <= ST_YMax(ST_MakeEnvelope(0, 0, 10, 10)) AND ymax >= ST_YMin(ST_MakeEnvelope(0, 0, 10, 10)))) AND (ST_Intersects(geom, ST_MakeEnvelope(0, 0, 10, 10)))
